2005-09-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Explain what goes into additional_packages

2005-09-26  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Make conditional_space_list remove
	leading/trailing whitespace.

2005-09-25  Alexander Hansen <alexkhansen@users.sourceforge.net>

	* PkgVersion.pm: Both of the axel versions that we have in Fink
	don't take --verbose.  Change flag to -v (which works) instead.

2005-09-21  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Make sure DocFiles targets are not
	group/world-writable but preserve execute bit.

2005-09-21  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: DocFiles handles conditionals, recursive copying
	of dirs, and implicit renaming dir1/dir2/file: to file.dir1.dir2

2005-09-21  Alexander Hansen <alexkhansen@users.sourceforge.net>

	* NetAccess.pm:	wget versions >= 1.10 use -no-verbose instead of 
	--non-verbose (arguably more GNU-standard).  In order that we may release
	a 1.10.x package use the short flag (-nv) instead as that is usable by both 
	wget < 1.10 and wget >= 1.10.

2005-09-16  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Notify.pm, Services.pm: Use generic way to find "sub-packages".

2005-09-14  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Use chowname_hr when reverting %i to root:admin.

2005-09-14  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* SysState.pm: Clean up documentation of private subs.
	* SysState.pm: Don't try to correct pre-existing dependency problems.
	* PkgVersion.pm: Just skip the dep-resolution if there's a fatal problem
	(eg: bad '<' in version spec inside the dpkg status file).

2005-09-13  Daniel Macks  <dmacks@netspace.org>

	* Command.pm: Implemented chowname_hr.

2005-09-11  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: Allow spec2struct and spec2string to say where the error
	occurred.
	* SysState.pm: Take advantage of above feature. Also, if fatal error
	occurs always print why.
